<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RecipePage">


    <ImageView
        android:id="@+id/ivBackRecipePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_option"
        android:src="@drawable/baseline_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/tvCurrentRecipeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurrentRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Recipe Name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/ivBackRecipePage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivRecipeImage"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/recipe_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentRecipeName" />

    <ImageView
        android:id="@+id/ivAddFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        android:contentDescription="@string/edit_option"
        android:src="@drawable/baseline_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/ivRecipeImage"
        app:layout_constraintEnd_toEndOf="@+id/ivRecipeImage" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Recipe"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCurrentRecipeRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:visibility="visible"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPrivateWarning"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/grey"
                android:textColor="@color/white"
                android:text="It's private send request \n to see recipe."
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:visibility="gone"
                />

        </FrameLayout>

    </ScrollView>


    <TextView
        android:id="@+id/tvPrivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btnSendRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_request"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvPrivate"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivate" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
