<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserRecipePageToEdit">


    <ImageView
        android:id="@+id/ivBackSavedRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_option"
        android:src="@drawable/baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurrentRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Recipe"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/ivBackSavedRecipe"
        app:layout_constraintTop_toBottomOf="@+id/ivBackSavedRecipe" />

    <ImageView
        android:id="@+id/ivCurrentRecipe"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentRecipe" />

    <ImageView
        android:id="@+id/ivNewRecipeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit_option"
        android:src="@drawable/baseline_edit"
        app:layout_constraintEnd_toEndOf="@+id/ivCurrentRecipe"
        app:layout_constraintTop_toTopOf="@+id/ivCurrentRecipe" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Recipe"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCurrentRecipe" />

    <TextView
        android:id="@+id/tvCurrentRecipeMethod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:padding="3dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <ImageView
        android:id="@+id/ivEditCurrentRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_option"
        android:src="@drawable/baseline_edit"
        app:layout_constraintEnd_toEndOf="@+id/ivCurrentRecipe"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/tvCurrentPrivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="Private"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/tvCurrentRecipeMethod"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentRecipeMethod" />

    <TextView
        android:id="@+id/tvCurrentPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="Public"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCurrentPrivate"
        app:layout_constraintEnd_toEndOf="@+id/tvCurrentRecipeMethod"
        app:layout_constraintTop_toTopOf="@+id/tvCurrentPrivate" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>